// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chip /> snapshot it should match snapshot with disabled 1`] = `
<Chip
  disabled={true}
>
  <Chip
    disabled={true}
    onClick={[Function]}
    onPointerDown={[Function]}
    onPointerUp={[Function]}
  >
    <mdc-chip
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot 1`] = `
<Chip>
  <Chip
    onClick={[Function]}
    onPointerDown={[Function]}
    onPointerUp={[Function]}
  >
    <mdc-chip
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with className 1`] = `
<Chip
  className="example-class"
>
  <Chip
    className="example-class"
    onClick={[Function]}
    onPointerDown={[Function]}
    onPointerUp={[Function]}
  >
    <mdc-chip
      class="example-class"
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with icon 1`] = `
<Chip
  iconName="accessibility-regular"
>
  <Chip
    iconName="accessibility-regular"
    onClick={[Function]}
    onPointerDown={[Function]}
    onPointerUp={[Function]}
  >
    <mdc-chip
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with id 1`] = `
<Chip
  id="example-id"
>
  <Chip
    id="example-id"
    onClick={[Function]}
    onPointerDown={[Function]}
    onPointerUp={[Function]}
  >
    <mdc-chip
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with style 1`] = `
<Chip
  style={
    Object {
      "color": "pink",
    }
  }
>
  <Chip
    onClick={[Function]}
    onPointerDown={[Function]}
    onPointerUp={[Function]}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <mdc-chip
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      style={
        Object {
          "color": "pink",
        }
      }
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;

exports[`<Chip /> snapshot should match snapshot with text 1`] = `
<Chip
  label="Some chip text"
>
  <Chip
    label="Some chip text"
    onClick={[Function]}
    onPointerDown={[Function]}
    onPointerUp={[Function]}
  >
    <mdc-chip
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      suppressHydrationWarning={true}
    />
  </Chip>
</Chip>
`;
